tests/fixtures/positive/style/UnnecessaryFullyQualifiedName.kt
package style

import java.util.ArrayList

fun example() {
    val x: java.util.ArrayList<Int> = java.util.ArrayList()
}
